https://adventofcode.com/2024/day/16
- intermediate commit